Fix t-test effect size marker alignment

--- a/www/style.css
+++ b/www/style.css
@@ -1819,12 +1819,13 @@ input.variable-select:disabled {
 
 .coefficient-footnote-marker {
   display: inline-block;
+  width: 0;
   margin-left: 1px;
   font-size: 10px;
-  line-height: 1;
-  position: relative;
-  top: -0.52em;
-  vertical-align: baseline;
+  line-height: 0;
+  position: static;
+  text-align: left;
+  vertical-align: super;
 }
 
 .coefficient-col-note-marker {
